--- a/.github/workflows/autostrava.yml
+++ b/.github/workflows/autostrava.yml
@@ -24,6 +24,16 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
+      - uses: actions/setup-node@v4
+        with:
+        node-version: lts/*
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
       - uses: abatilo/actions-poetry@v2.3.0
         with:
           poetry-version: ${{ env.POETRY_VERSION }}
@@ -43,9 +53,6 @@ jobs:
       - run: poetry run ruff format --check .
 
       - run: poetry run ruff check .
-
-      - name: Ensure browsers are installed
-        run: python -m playwright install --with-deps
 
       - run: python -m autostrava
         
