--- a/.github/workflows/autostrava.yml
+++ b/.github/workflows/autostrava.yml
@@ -25,9 +25,8 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - uses: actions/setup-node@v4
-
-      - name: Install dependencies
-        run: npm ci
+        with:
+          node-version: lts/*
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
