chore: update versions

--- a/.github/workflows/autostrava.yml
+++ b/.github/workflows/autostrava.yml
@@ -3,30 +3,28 @@ name: Autostrava
 on:
   schedule:
     - cron: "30 6-23/3 * * *"
-  workflow_dispatch:
-
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths:
-#       - .github/workflows/autostrava.yml
-#       - autostrava/**
+  push:
+    branches:
+      - main
+    paths:
+      - .github/workflows/autostrava.yml
+      - autostrava/**
 
 env:
   BASE_URL: https://www.strava.com/
+  PYTHON_VERSION: 3.12.7
   STRAVA_EMAIL: ${{ secrets.STRAVA_EMAIL }}
   STRAVA_PASSWORD: ${{ secrets.STRAVA_PASSWORD }}
   STRAVA_PROFILE_ID: ${{ secrets.STRAVA_PROFILE_ID }}
 jobs:
   run-kudos-cron:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.9.10'
+          python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
       - run: pip install -r requirements.txt
       - run: playwright install
