--- a/.github/workflows/autostrava.yml
+++ b/.github/workflows/autostrava.yml
@@ -15,7 +15,7 @@ env:
   PYTHON_VERSION: 3.12.7
   STRAVA_EMAIL: ${{ secrets.STRAVA_EMAIL }}
   STRAVA_PASSWORD: ${{ secrets.STRAVA_PASSWORD }}
-  STRAVA_PROFILE_ID: ${{ secrets.STRAVA_PROFILE_ID }}
+  STRAVA_PROFILE_ID: ${{ vars.STRAVA_PROFILE_ID }}
 jobs:
   run-kudos-cron:
     runs-on: ubuntu-latest
