--- a/.github/workflows/autostrava.yml
+++ b/.github/workflows/autostrava.yml
@@ -27,4 +27,5 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
       - run: pip install -r requirements.txt
       - run: playwright install
+      - run: playwright install-deps 
       - run: python -m autostrava
